# manipulation

./: .gitignore  README.md  Test_compliance_modes.py  tags
config/: joint_impedance__arm_roll.yaml  joint_impedance_arm_lift.yaml  joint_impedance_wrist_flex.yaml  joint_impedance_wrist_roll.yaml
dmp/: tags
dmp/script/: sample.py
dmp_manipulation/: CMakeLists.txt  package.xml
dmp_manipulation/data/: dmp_trajectories.csv
dmp_manipulation/include/: dmp_manager.h
dmp_manipulation/src/: dmp_manager.cpp  dmp_test.cpp
villa_manipulation/: .travis.yml  README.md
villa_manipulation/hsrb_grasp_planner_test/: CMakeLists.txt  package.xml  setup.py
villa_manipulation/hsrb_grasp_planner_test/script/: example.py
villa_manipulation/hsrb_grasp_planner_test/src/hsrb_grasp_planner/: gripper_pose_planner.py
villa_manipulation/hsrb_impedance_control_example/: CMakeLists.txt  package.xml
villa_manipulation/hsrb_impedance_control_example/src/hsrb_impedance_control_example/: impedance_control_switch.py
villa_manipulation/impedance_control_example/: setup.py
villa_manipulation/impedance_control_example/script/: grasp_object.py  place_object.py
villa_manipulation/impedance_control_example/src/hsrb_impedance_control_example/: utils.py
villa_manipulation/manipulation_functions/: CMakeLists.txt  package.xml
villa_manipulation/manipulation_functions/scripts/: compliance_mode_test.py  demo_open_door  head_message.py  moveit_attached_object_demo.py  omni_actionlib.py  omni_message_velocity.py  open_hinged_door_final.py  tf_publisher.py
villa_manipulation/manipulation_functions/src/: arm_actionlib.cpp  gripper_actionlib.cpp  gripper_actionlib_grasp.cpp  head_actionlib.cpp  omni_message.cpp
villa_manipulation/manipulation_tutorials/: CMakeLists.txt  README.md  package.xml
villa_manipulation/manipulation_tutorials/scripts/: arm_actionlib.py  arm_actionlib_cancel.py  arm_message.py  arm_message_cancel.py  demo_open_door  gripper_actionlib.py  gripper_actionlib_trajectory.py  gripper_message.py  head_actionlib.py  moveit_constraints_demo.py  moveit_demo.py  moveit_obstacles_demo.py  moveit_pick_and_place_demo.py  omni_message.py  open_hinged_door.py  open_hinged_door_final.py  open_hinged_door_final_backup.py  open_hinged_door_mk.py  open_hinged_door_mk_before.py  open_hinged_door_nene.py  open_hinged_door_try.py  pickup_bottle.py
villa_manipulation/manipulation_tutorials/src/: arm_actionlib.cpp  arm_joint_action.cpp  arm_joint_ctrl.cpp  arm_message.cpp  arm_trajectory.cpp  gripper_message.cpp  head_message.cpp  omni_actionlib.cpp  omni_message_velocity.cpp
villa_manipulation/villa_manipulation/: CMakeLists.txt  OpenDoor.action  package.xml  setup.py
villa_manipulation/villa_manipulation/action/: OpenDoor.action
villa_manipulation/villa_manipulation/launch/: hsrb_empty_world_with_hinged_door.launch  hsrb_empty_world_with_small_objects.launch  open_door_task.launch
villa_manipulation/villa_manipulation/scripts/: dropOff_service.py  handOver_service.py  nav_open_door_client.py  open_door_client.py  open_door_service.py  pickup_from_table_service.py  pickup_service.py  tf_broadcaster
villa_manipulation/villa_manipulation/src/villa_manipulation/: basic_grasp_planner.py  bwi_perception_module.py  hsrb_perception_module.py
villa_manipulation/villa_manipulation/srv/: BroadcastObjectFrames.srv  DropOffObject.srv  Opendoor.srv  Pickup.srv  PickupObject.srv  PickupObjectsFromTable.srv  PickupObjectsFromTable2.srv
villa_manipulation/villa_manipulation/worlds/: empty_world_with_hinged_door.world  empty_world_with_small_objects.world
villa_manipulation/villa_parallel_planner/: CMakeLists.txt  package.xml  setup.py
villa_manipulation/villa_parallel_planner/launch/: parallel_planner.launch  planner_idx.xml
villa_manipulation/villa_parallel_planner/msg/: Action.msg  SequencePlan.msg
villa_manipulation/villa_parallel_planner/scripts/: parallel_planner_service
villa_manipulation/villa_parallel_planner/src/villa_parallel_planner/: parallel_sequence_planner.py  sequence_planner.py
villa_manipulation/villa_parallel_planner/srv/: ParallelPlanSequence.srv
